# StratumExplorer

./: .gitignore  11.csv  BACKEND_HANDOFF.md  CMakeLists.txt  DESIGN_DRAFT.md  ENVIRONMENT_SETUP.md  HANDOFF_CHECKLIST.md  MIGRATION_GUIDE.md  NODE_SPEC.md  NODE_SPEC_FOR_BACKEND.md  PROJECT_CONTEXT.md  QUICK_START.md  README.md  SETUP_STATUS.md  build_oilpro.cmd  build_release.cmd  chat.md  node_specs.README.md  node_specs.json
cmake/Modules/: BaseConfig.cmake  BasePackages.cmake  CheckVcpkg.cmake  FindHDF5.cmake  FindQtTranslations.cmake  ProjectSetup.cmake
docs/: BACKEND_HANDOFF.md  BACKEND_TODOS.md  HANDOFF_CHECKLIST.md  HDF5_READ_SETUP.md  MIGRATION_GUIDE.md  PROJECT_CONTEXT.md  README.md  node_specs.README.md  node_specs.json  工作流节点兼容性测试用例.md  算法节点兼容性校验说明-20260523(1).docx
platform/: CMakeLists.txt
platform/linux/: CMakeLists.txt
platform/mac/: CMakeLists.txt
platform/windows/: CMakeLists.txt
platform/windows/winrc/: icon.rc
resources/qrc/: font.qrc
src/: CMakeLists.txt
src/app/: Application.cpp  Application.h  CMakeLists.txt  HiDpi.h  main.cpp
src/app/depends/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/config/: CMakeLists.txt
src/core/context/: CMakeLists.txt  CoreContext.cpp  CoreContext.h  CoreContextFactory.cpp
src/core/dao/: CMakeLists.txt  DatabaseManager.cpp
src/core/dao/interfaces/: CMakeLists.txt
src/core/dao/project/: CMakeLists.txt
src/core/dao/system/: CMakeLists.txt  LicenseDaoImpl.cpp  LicenseDaoImpl.h  UserDaoImpl.cpp  UserDaoImpl.h
src/core/depends/: CMakeLists.txt
src/core/interfaces/: CMakeLists.txt
src/core/interfaces/context/: CMakeLists.txt  CoreContextFactory.h  ICoreContext.h
src/core/interfaces/dao/: BaseDao.h  CMakeLists.txt  DatabaseManager.h
src/core/interfaces/dao/system/: ILicenseDao.h  IUserDao.h
src/core/interfaces/models/: CMakeLists.txt
src/core/interfaces/models/constants/: Constants.h
src/core/interfaces/models/enums/: DeviceType.h
src/core/interfaces/models/po/: IUser.h
src/core/interfaces/models/processing/: CMakeLists.txt  NodeDefinition.h  WorkflowTypes.h
src/core/interfaces/service/: CMakeLists.txt
src/core/interfaces/service/processing/: CMakeLists.txt  INodeFactory.h  IPlotData.h  IProcessNode.h  IWorkflowEngine.h  moc_anchor.cpp
src/core/interfaces/service/system/: ILicenseService.h  IUserService.h
src/core/interfaces/utils/: CMakeLists.txt
src/core/models/: CMakeLists.txt
src/core/service/: CMakeLists.txt
src/core/service/processing/: CMakeLists.txt  DemoNodes.cpp  DemoNodes.h  ExternalProcessNode.cpp  ExternalProcessNode.h  ExternalProcessRunner.cpp  ExternalProcessRunner.h  LASToHDF5Converter.cpp  LASToHDF5Converter.h  LogBus.cpp  LogBus.h  NodeCompatibility.cpp  NodeCompatibility.h  NodeRegistry.cpp  NodeRegistry.h  ParamRangePair.cpp  ParamRangePair.h  PlotData.cpp  PlotData.h  ProductionNodeParams.cpp  ProductionNodeParams.h  ProductionNodes.cpp  ProductionNodes.h  WorkflowEngine.cpp  WorkflowEngine.h  WorkflowTypes.cpp  node_client_params.json  node_client_params.qrc
src/core/service/system/: LicenseServiceImpl.cpp  LicenseServiceImpl.h  UserServiceImpl.cpp  UserServiceImpl.h
src/core/utils/: CMakeLists.txt
src/depends/: CMakeLists.txt
src/gui/: CMakeLists.txt
src/gui/adapter/: CMakeLists.txt
src/gui/context/: CMakeLists.txt  GuiContext.cpp  GuiContext.h  GuiContextFactory.cpp
src/gui/controller/: CMakeLists.txt
src/gui/controller/system/: LicenseController.cpp  LicenseController.h
src/gui/depends/: CMakeLists.txt
src/gui/guiservice/: CMakeLists.txt
src/gui/interfaces/: CMakeLists.txt
src/gui/interfaces/context/: CMakeLists.txt  GuiContextFactory.h  IGuiContext.h
src/gui/interfaces/controller/: CMakeLists.txt
src/gui/interfaces/controller/system/: ILicenseController.h
src/gui/interfaces/guiservice/: CMakeLists.txt
src/gui/interfaces/widgets/: BaseDataOperateDialog.cpp  BaseDataOperateDialog.h  BaseDataOperateMainWindow.cpp  BaseDataOperateMainWindow.h  BaseDataOperateWidget.cpp  BaseDataOperateWidget.h  CMakeLists.txt  DataOperateTools.h  IDataOperateInterface.h
src/gui/mainwindow/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  WelcomePage.cpp  WelcomePage.h  WelcomePage.ui
src/gui/mainwindow/dialogs/: CMakeLists.txt  LicenseDialog.cpp  LicenseDialog.h  LicenseDialog.ui
src/gui/mainwindow/menus/: CMakeLists.txt
src/gui/utils/: CMakeLists.txt  ThemeManager.cpp  Thememanager.h
src/gui/widgets/: CMakeLists.txt
src/gui/workspace/: CMakeLists.txt  WorkSpacePage.cpp  WorkSpacePage.h  WorkSpacePage.ui
src/gui/workspace/device/: CMakeLists.txt  DevicePage.cpp  DevicePage.h  DevicePage.ui
src/gui/workspace/processing/: CMakeLists.txt  ProcessingPage.cpp  ProcessingPage.h  ProcessingPage.ui
src/gui/workspace/processing/workflow/: CMakeLists.txt  DasConvertDialog.cpp  DasConvertDialog.h  DasConvertDialog.ui  DataCropDialog.cpp  DataCropDialog.h  DataCropDialog.ui  DataMergeDialog.cpp  DataMergeDialog.h  DataMergeDialog.ui  DepthCorrectDialog.cpp  DepthCorrectDialog.h  DepthCorrectDialog.ui  EdgeItem.cpp  EdgeItem.h  FormatConvertDialog.cpp  FormatConvertDialog.h  FormatConvertDialog.ui  LfdasExtractDialog.cpp  LfdasExtractDialog.h  LfdasExtractDialog.ui  LogDock.cpp  LogDock.h  NodeItem.cpp  NodeItem.h  NodePalette.cpp  NodePalette.h  ParamRangePairUi.cpp  ParamRangePairUi.h  PlotDialog.cpp  PlotDialog.h  TimeCorrectDialog.cpp  TimeCorrectDialog.h  TimeCorrectDialog.ui  WorkflowEditorTab.cpp  WorkflowEditorTab.h  WorkflowScene.cpp  WorkflowScene.h  WorkflowView.cpp  WorkflowView.h  (+1 more)
src/gui/workspace/realtime/: CMakeLists.txt  RealtimePage.cpp  RealtimePage.h  RealtimePage.ui
src/gui/workspace/well/: CMakeLists.txt  WellPage.cpp  WellPage.h  WellPage.ui
tools/: README.md  verify_environment.ps1
translations/: global_en_us.ts  global_zh_cn.ts  translations.qrc
